--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,10 +26,10 @@ dependencies:
   get_it: ^3.0.3
   dots_indicator: ^1.1.0
   auto_size_text: ^2.1.0
-  admob_flutter: ^0.3.4
   responsive_widgets: ^0.1.10
   flutter_local_notifications:
   path_provider:
+  firebase_admob: ^0.9.0+10
 
   connectivity: ^0.4.6+2
 
