--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  shared_preferences: ^0.5.4+3
+  shared_preferences: ^0.5.6
   provider: ^3.1.0+1
   intl: ^0.16.0
   http: ^0.12.0+2
@@ -28,7 +28,7 @@ dependencies:
   auto_size_text: ^2.1.0
   responsive_widgets: ^0.1.10
   flutter_local_notifications: ^1.1.2
-  path_provider:
+  # path_provider:
   firebase_admob: ^0.9.0+10
 
   connectivity: ^0.4.6+2
